# YouTube-Blog

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
FFT/: ft_guitar_example.m  ft_guitar_livescript.mlx
LLMs/: README.md
agents/: README.md
agents/4-mcp/: README.md  directory.csv  mcp-server-example.py  oauth.py  pyproject.toml  requirements.txt
agents/4-mcp/email-examples/: 3-way-intro.md  call-follow-up.md
agents/4-mcp/prompts/: ava.md
ai-for-business/: README.md
autoencoder/: autoencoder_example.m  autoencoder_example_livescript.mlx
causal_discovery/: causal_discovery_example.ipynb  requirements.txt
causal_inference/: causal_inference_example.html  causal_inference_example.ipynb  requirements.txt
causality/: README.md
decision-tree/: README.md
decision_tree/: decision_tree_example.ipynb
decision_tree_2-uses/: use-1_reduce_predictor_count.ipynb  use-2_predictor_segmentation.ipynb
decision_tree_ensembles/: tree_ensemble_example.ipynb
fourierTransform/: ft_toy_example.m  ft_toy_livescript.mlx
full-stack-data-science/: README.md
ica/: EEG_data.mat  pca_ica_example.m  pca_ica_livescript.mlx
multimodal-ai/: README.md
pca/: pca_stock_example.html  pca_stock_example.ipynb
power-laws/: power-laws.ipynb
propensity_score/: df_propensity_score.p  propensity_score_example.ipynb  propensity_score_example.py
python-quickstart/: README.md  getting-started.ipynb  my-script.py  numpy-basics.py  requirements.txt  sk.py  summarize-paper.py
smoothing_time_series_with_wavelets/: README.md  requirements.txt  (+1 more)
waveletTransform/: ECG.mat  (+2 more)
(+490 files in other folders)
