[project]
name = "agent-mcp-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.167.0",
    "google-auth-oauthlib>=1.2.2",
    "mcp[cli]>=1.6.0",
    "openai>=1.12.0",
    "openai-agents>=0.0.12",
    "python-dotenv>=1.0.0",
]
